0023883: Bound color in the primitive array do not work when displayed using VBO

Modifies comes from OCCT CR23883 branch.