src/OpenGl/OpenGl_PrimitiveArray.cxx
@@ -278,6 +278,7 @@ void OpenGl_PrimitiveArray::DrawArray (Tint theLightingModel,
           Tint* anOffset = NULL;
           for (i = 0; i < myPArray->num_bounds; ++i)
           {
+            if (pfc != NULL) glColor3fv (pfc[i].rgb);
             glDrawElements (myDrawMode, myPArray->bounds[i], myVbos[VBOEdges]->GetDataType(), anOffset);
             anOffset += myPArray->bounds[i]; 
           }
@@ -337,10 +338,7 @@ void OpenGl_PrimitiveArray::DrawArray (Tint theLightingModel,
         {
           for (i = n = 0; i < myPArray->num_bounds; ++i)
           {
-            if (pfc != NULL)
-            {
-              glColor3fv (pfc[i].rgb);
-            }
+            if (pfc != NULL) glColor3fv (pfc[i].rgb);
             glDrawArrays (myDrawMode, n, myPArray->bounds[i]);
             n += myPArray->bounds[i];
           }
